completed ux of creating a reminder